Make sure static components are spaced/ aligned properly

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -94,7 +94,11 @@ h2 {
 
 #search-form > h2 {
     white-space: nowrap;
-    padding: 0 1em 0 1em;
+    padding: 0 1em 0 0;
+
+    @include for-tablet-landscape-up {
+        font-size: 18pt;
+    }
 }
 
 .search-input {
@@ -138,17 +142,24 @@ select.search-input:disabled {
 }
 
 #search-results {
-    margin: 0 1em 0 1em;
     flex-grow: 1;
     display: none;
     flex-flow: column nowrap;
     overflow-y: hidden;
+
+    @include for-tablet-portrait-up {
+        padding: 2em 2em 0 2em;
+    }
 }
 
 #search-results > h2 {
-    margin: 0;
+    margin: 0 0 .3em 0;
     padding: 0;
     color: $cc-orange;
+
+    @include for-tablet-landscape-up {
+        font-size: 18pt;
+    }
 }
 
 #results-table {
@@ -176,7 +187,7 @@ select.search-input:disabled {
 }
 
 @mixin results-cell-layout {
-    padding: 1em .5em;
+    padding: .7em .5em .7em 0;
     display: table-cell;
 }
 
